--- a/BarBaridade/index.html
+++ b/BarBaridade/index.html
@@ -13,28 +13,28 @@
 
         <form action="" method="get" id="form-buscaId">
             <h2>Buscar Bebida por ID</h2>
-            <input type="number" id="input-buscaId" placeholder="ID da Bebida" required min="1" max="999">
+            <input type="number" id="input-buscaId" placeholder="Código da Bebida" required min="1" max="999">
             <button type="submit">Buscar</button>
         </form>
 
         <form action="" method="get" id="form-post">
             <h2>Adicionar Bebida</h2>
             <input type="text" id="newNome" placeholder="Nome" required>
-            <input type="number" id="newTeor" placeholder="Teor Alcoólico" required min="1" max="999">
+            <input type="number" id="newTeor" placeholder="Teor Alcoólico" required min="1" max="100">
             <button type="submit">Adicionar</button>
         </form>
 
         <form action="" method="get" id="form-put">
             <h2>Editar Bebida</h2>
-            <input type="number" id="updatedId" placeholder="ID" required min="1" max="999">
+            <input type="number" id="updatedId" placeholder="Código da Bebida" required min="1" max="999">
             <input type="text" id="updatedNome" placeholder="Novo Nome" required>
-            <input type="number" id="updatedTeor" placeholder="Novo Teor Alcoólico" required min="1" max="999">
+            <input type="number" id="updatedTeor" placeholder="Novo Teor Alcoólico" required min="1" max="100">
             <button type="submit">Atualizar</button>
         </form>
 
         <form action="" method="get" id="form-delete">
             <h2>Apagar Bebida</h2>
-            <input type="number" id="input-deleteId" placeholder="ID" required min="1" max="999">
+            <input type="number" id="input-deleteId" placeholder="Código da Bebida" required min="1" max="999">
             <button type="submit">Apagar</button>
         </form>
 
@@ -65,11 +65,10 @@
   
        <div id="resultado-mistura">
             <h2>Resultado da Mistura</h2>
-            <p><strong>Nome:</strong> <span id="nome-mistura"></span></p>
+            <p><strong>Nome do Gole:</strong> <span id="nome-mistura"></span></p>
             <p><strong>Teor alcoólico total:</strong> <span id="teor-mistura"></span>%</p>
             <p><strong>Descrição:</strong> <span id="frase-mistura"></span></p>  
             <img id="imagem-mistura" src="" alt="Imagem do drink" style="max-width: 200px; margin-top: 10px;">  
-
         </div>
 
 
