arrumando last error

--- a/BarBaridade/index.html
+++ b/BarBaridade/index.html
@@ -12,7 +12,7 @@
         <button id="btn-todas">Ver Catálogo</button>
 
         <form action="" method="get" id="form-buscaId">
-            <h2>Buscar Bebida por ID</h2>
+            <h2>Buscar Bebida</h2>
             <input type="number" id="input-buscaId" placeholder="Código da Bebida" required min="1" max="999">
             <button type="submit">Buscar</button>
         </form>
