--- a/BarBaridade/index.html
+++ b/BarBaridade/index.html
@@ -72,7 +72,7 @@
         </div>
 
 
-    <script src="./GeradorDeMistura.cjs"></script>
+    <script src="./GeradorDeMistura.js"></script>
     <script src="./script.js"></script>
 
 </body>
